--- a/assets/stylesheets/global.css
+++ b/assets/stylesheets/global.css
@@ -86,3 +86,34 @@ body {
     font-family: "Sarabun", "SF Pro Text", "SF Pro Icons", "Helvetica Neue", Helvetica, Arial, "Roboto", sans-serif !important;
 }
 
+.txt-200 {
+    font-weight: 200 !important;
+}
+
+.txt-300 {
+    font-weight: 300 !important;
+}
+
+.txt-400 {
+    font-weight: 400 !important;
+}
+
+.txt-500 {
+    font-weight: 500 !important;
+}
+
+.txt-600 {
+    font-weight: 600 !important;
+}
+
+.txt-700 {
+    font-weight: 700 !important;
+}
+
+.txt-800 {
+    font-weight: 800 !important;
+}
+
+.txt-900 {
+    font-weight: 900 !important;
+}
