--- a/assets/stylesheets/credit.css
+++ b/assets/stylesheets/credit.css
@@ -1,6 +1,6 @@
 .credit-header {
     font-weight: 600;
-    font-size: 32px;
+    font-size: 36px;
     margin-bottom: 25px;
     text-align: center
 }
@@ -36,7 +36,7 @@
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     border-radius: 22px !important;
     padding: 18px 28px;
-
+    min-width: 522px;
 }
 
 .no-opacity {
