--- a/assets/stylesheets/credit.css
+++ b/assets/stylesheets/credit.css
@@ -1,7 +1,6 @@
 .credit-header {
     font-weight: 600;
     font-size: 42px;
-    /*margin-bottom: 25px;*/
     text-align: center
 }
 
@@ -38,7 +37,7 @@
     background: white;
     /*box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;*/
     /*box-shadow: rgba(50, 50, 93, 0.25) 0 2px 5px -1px, rgba(0, 0, 0, 0.3) 0 1px 3px -1px !important;*/
-    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    box-shadow: rgba(0, 0, 0, 0.12) 0 1px 3px, rgba(0, 0, 0, 0.24) 0 1px 2px;
     border-radius: 22px !important;
     padding: 14px 28px;
     min-width: 522px;
