--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -3,6 +3,10 @@
     background-repeat: no-repeat;
     margin: 0 auto;
 }
+.rainbow{
+    background-repeat: no-repeat;
+    margin: 0 auto;
+}
 
 .first-box {
     background-color: transparent;
