--- a/assets/stylesheets/global.css
+++ b/assets/stylesheets/global.css
@@ -6,7 +6,7 @@
 
 body::before {
     content: "";
-    background: url("../../asset_img/isad-background.jpg") no-repeat fixed;
+    background: url("../images/isad-background.jpg") no-repeat fixed;
     background-size: cover;
     position: fixed;
     top: 0;
