--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -8,7 +8,13 @@
     max-width: 1280px;
     margin: 0 auto;
 }
-
+.title{
+    font-size: 1.875rem; /* 30px */
+    line-height: 2.25rem; /* 36px */
+    margin-left: 0.625rem; /* 10px */
+    margin-bottom: 0.625rem; /* 10px */
+    margin-top: 0.75rem; /* 12px */
+}
 .sensor-box {
     border: black 3px;
     border-style: solid none;
@@ -23,8 +29,8 @@
 
 .table-forecast {
     display: block;
-    max-width: 930px;
-    max-height: 400px;
+    max-width:930px;
+    max-height:400px;
     width: auto;
     height: auto;
     margin: 0 auto;
