--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -9,11 +9,11 @@
     margin: 0 auto;
 }
 .title{
-    font-size: 1.875rem; /* 30px */
-    line-height: 2.25rem; /* 36px */
-    margin-left: 0.625rem; /* 10px */
-    margin-bottom: 0.625rem; /* 10px */
-    margin-top: 0.75rem; /* 12px */
+    font-size: 1.875rem !important; /* 30px */
+    line-height: 2.25rem !important; /* 36px */
+    margin-left: 0.625rem !important; /* 10px */
+    margin-bottom: 0.625rem !important; /* 10px */
+    margin-top: 0.75rem !important; /* 12px */
 }
 .sensor-box {
     border: black 3px;
