Fixed Link Responsive Design

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -32,7 +32,7 @@
 
 .table-forecast {
     display: block;
-    max-width: 930px;
+    max-width: 90vw;
     max-height: 400px;
     width: auto;
     height: auto;
