--- a/assets/stylesheets/credit.css
+++ b/assets/stylesheets/credit.css
@@ -29,8 +29,10 @@
     box-shadow: rgba(0, 0, 0, 0.12) 0 1px 3px, rgba(0, 0, 0, 0.24) 0 1px 2px;
     border-radius: 22px !important;
     padding: 14px 28px;
-    min-width: 522px;
+    width: 100%;
+    max-width: 600px;
     margin: 0 8px;
+    margin-top: 15px;
 }
 
 .no-opacity {
